<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_list_todo"
            android:title="@string/menu_item_list_todos"
            android:icon="@drawable/ic_menu_list"/>

        <item
            android:id="@+id/menu_item_add_todo"
            android:title="@string/menu_item_add_todo"
            android:icon="@drawable/ic_menu_add"/>
    </group>

</menu>